@@ -12,7 +12,7 @@ plugins {
 
 application {
     mainClassName = 'com.firelib.techbot.MainKt'
-    applicationDefaultJvmArgs = ['-Xms128m', '-Xmx1024m']
+    applicationDefaultJvmArgs = ['-Xms128m', '-Xmx1024m', '-XX:+PrintGCDetails', '-Xlog:gc*,gc+phases=info']
 }
 
 
